[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "swft"
version = "0.0.1"
description = "A tool for automatically generating Ascend cce"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "xxx", email = "xxx.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
